# cats

./: .env.example  .gitignore  .gitlab-ci.yml  .venv  ARCHITECTURE.md  CLAUDE.md  Dockerfile  Makefile  README.md  THREAT_MODEL.md  USERS.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.claude/skills/document-openemr-fix/: SKILL.md
.claude/skills/next-round/: SKILL.md
docs/: COST_ANALYSIS.md  DEPLOY.md  DESIGN_SYSTEM.md  ROADMAP.md  W3_ARCHITECTURE.md  W3_THREAT_MODEL.md  W3_THREAT_RESEARCH.md  cats-architecture-defense.html
docs/resolved/: 2026-05-13-extract-php-jwt-issuer-mismatch.md  2026-05-13-supervisor-chart-enriched-fanout-dos.md  2026-05-15-supervisor-chart-area-over-read.md  README.md
evals/: README.md  __init__.py  loader.py  runner.py  suite.py
evals/cases/documentation/: 01_injection_pass_report.md  02_exfil_critical_severity.md  03_tool_abuse_fallback.md
evals/cases/judge/: 01_injection_canary_echoed.md  02_injection_clean_refusal.md  03_injection_partial.md  04_exfil_marker_leaked.md  05_target_error.md  06_unknown_verdict_clamped.md  07_injection_canary_in_assistant_message.md  08_supervisor_narration_only_is_error.md  09_injection_canary_in_unknown_event.md  10_bare_error_json_is_error.md  11_multi_turn_decisive_turn_identified.md  12_multi_turn_holds_no_decisive_turn.md
evals/cases/orchestrator/: 01_cold_start.md  02_saturated_injection.md  03_open_critical_exfil.md  04_recent_regression_tool_abuse.md  05_mixed_finding_and_regression.md  06_tiny_budget.md  07_category_disabled.md  08_everything_stale.md  09_technique_always_failing.md  10_adversarial_empty_tools.md  11_adversarial_contradictory_signals.md  12_adversarial_zero_budget.md
evals/cases/red_team/: 01_injection_ignore_previous_clean.md  02_injection_forgot_canary.md  03_exfil_markdown_image.md  04_exfil_cross_patient.md  05_tool_abuse_chart_over_read.md  06_tool_abuse_cross_task.md  07_injection_multi_turn_escalation.md  08_injection_multi_turn_no_prior_responses_falls_back.md  09_agent_gives_up_after_three_refusals.md  10_agent_clean_submit_on_first_turn_pass.md  11_agent_escalates_via_mutate_then_submits_pass.md  12_agent_force_submits_on_turn_cap.md  13_agent_uses_regression_history_before_proposing.md  13_agent_walks_two_attempts_in_one_run.md
evals/orchestrator/: __init__.py
evals/orchestrator/v1/: README.md  __init__.py  runner.py
evals/runners/: __init__.py  documentation.py  judge.py  orchestrator.py  red_team.py
evals/scorers/: __init__.py  documentation.py  judge.py  orchestrator.py  red_team.py
findings/: R3_policy_puppetry_canary_echo.TEMPLATE.md
infra/caddy/: cats.caddyfile
migrations/: env.py
migrations/versions/: 20260511_0001_initial_schema.py  20260511_0002_audit_at_server_default.py  20260512_0003_users.py  20260512_0004_r2_schema.py  20260512_0005_r4_message_bus.py  20260513_0006_campaign_reports.py  20260513_0007_regression_runs.py  20260513_0008_multi_turn.py  20260513_0008_per_project_webhook_secret.py  20260513_0009_multi_turn.py  20260513_0010_red_team_agent_source.py  20260514_0011_campaign_report_artifacts.py  20260514_0012_kickoff_turns.py  20260514_0013_attack_artifacts.py  20260514_0014_run_failure_reason.py
reports/: README.md  VLN-2026-001-supervisor-chart-enriched-fanout-dos.md  VLN-2026-002-extract-php-jwt-issuer-mismatch.md  VLN-2026-003-supervisor-chart-area-over-read.md  VLN-2026-004-synthesize-refusal-compensation-disclosure.md  _template.md
reports/exfil/: R6_foundations.md
reports/indirect_injection/: R5_foundations.md
reports/openemr/: README.md  VLN-2026-001-supervisor-chart-enriched-fanout-dos.md  VLN-2026-002-extract-php-jwt-issuer-mismatch.md  VLN-2026-003-supervisor-chart-area-over-read.md  VLN-2026-004-synthesize-refusal-compensation-disclosure.md
reports/tool_abuse/: R7_foundations.md  baselines.md
scripts/: r5_r6_smoke.py
src/cats/: __init__.py  clinical_misinformation_signals.py  config.py  logging.py  xss_signals.py
src/cats/agents/: __init__.py
src/cats/api/: __init__.py  app.py  auth.py  context.py  templating.py
src/cats/cli/: main.py  (+4 more)
tests/: README.md  conftest.py
tests/integration/: conftest.py  test_campaign_e2e.py  test_campaign_report_route.py  test_campaign_timeline.py  test_campaign_tools_sql.py  test_deploy_webhook.py  test_health_endpoint.py  test_indirect_injection_upload.py  test_judge_accuracy.py  test_judge_harness_smoke.py  test_judge_target_rejected.py  test_login_flow.py  test_messaging_bus.py  test_messaging_worker.py  test_multi_technique_campaign.py  test_multi_turn_e2e.py  test_orchestrator_adaptive.py  test_orchestrator_no_stub_run.py  test_orchestrator_planner_retry.py  test_project_webhook_ui.py  test_projects_crud.py  test_r4_bus_e2e.py  test_regression_promotion.py  test_regression_sweep_e2e.py  test_regressions_actions.py  test_regressions_route.py  test_run_detail_metrics.py  test_run_repo_sweep.py  test_smoke.py
tests/unit/: test_attack_signature.py  test_auth.py  test_bandit_policy.py  test_campaign_detail_progress.py  test_campaign_report_renderers.py  test_campaign_report_writer.py  test_clinical_misinformation_deterministic.py  test_clinical_misinformation_fixtures.py  test_clinical_misinformation_specialist.py  test_config_factory.py  test_cost_calc.py  test_cross_patient_probe.py  test_csrf.py  test_dispatcher.py  test_documenter_evals.py  test_docx_attacks.py  test_docx_validity.py  test_dos_cost_deterministic.py  test_escalation_decision.py  test_evals_runner.py  test_executor_dispatch.py  test_exfil_deterministic.py  test_exfil_fixtures.py  test_exfil_markers.py  test_exfil_specialist.py  test_fixture_eval_fields.py  test_format_usd.py  test_health_checks.py  test_indirect_injection_deterministic.py  test_indirect_injection_fixtures.py  test_indirect_injection_specialist.py  test_injection_multi_turn_specialist.py  test_injection_specialist.py  test_judge_multi_turn.py  test_judge_verifier.py  test_kickoff_helper.py  test_llm_client_tool_use.py  test_messaging_envelopes.py  test_mutator_strategies.py  test_orchestrator_agent_graph.py  (+26 more)
(+335 files in other folders)
